force-app/main/default/objects/PEO_Onboarding_Medical_Questionnaire__c/PEO_Onboarding_Medical_Questionnaire__c.object-meta.xml
<CustomObject>
    <label>PEO Underwriting Medical Questionnaire</label>
    <nameField>
        <displayFormat>of-{0000}</displayFormat>
        <label>PEO Underwriting Medical Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PEO Underwriting Medical Questionnaires</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>