force-app/main/default/objects/PEO_Onboarding_Medical_Questionnaire__c/fields/Current_PEO_Carrier_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Current_PEO_Carrier_if_applicable__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current PEO Carrier(if applicable)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>