force-app/main/default/objects/PEO_Onboarding_Medical_Questionnaire__c/fields/Group_cvrg_denied_past_three_yrs__c.field-meta.xml
<CustomField>
    <fullName>Group_cvrg_denied_past_three_yrs__c</fullName>
    <label>Group cvrg denied past three yrs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>