force-app/main/default/objects/PEO_Onboarding_Medical_Questionnaire__c/fields/info_Participant_under_treatment__c.field-meta.xml
<CustomField>
    <fullName>info_Participant_under_treatment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>info Participant under treatment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>