force-app/main/default/objects/PEO_Onboarding_Medical_Questionnaire__c/fields/info_Substance_dependency__c.field-meta.xml
<CustomField>
    <fullName>info_Substance_dependency__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>info Substance dependency</label>
    <type>TextArea</type>
</CustomField>