force-app/main/default/objects/PEO_Onboarding_Medical_Questionnaire__c/fields/PEO_Onboarding_Checklist__c.field-meta.xml
<CustomField>
    <fullName>PEO_Onboarding_Checklist__c</fullName>
    <label>PEO Underwriting Checklist</label>
    <referenceTo>PEO_Onboarding_Checklist__c</referenceTo>
    <relationshipLabel>PEO Underwriting Medical Questionnaires</relationshipLabel>
    <relationshipName>PEO_Onboarding_Medical_Questionnaires</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>