force-app/main/default/objects/PEO_Onboarding_Medical_Questionnaire__c/fields/Renewal_date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Renewal date</label>
    <type>Date</type>
</CustomField>