force-app/main/default/objects/PEO_Onboarding_Medical_Questionnaire__c/fields/Use_Parent_Questionnaire_Answers__c.field-meta.xml
<CustomField>
    <fullName>Use_Parent_Questionnaire_Answers__c</fullName>
    <description>Used to determine whether questions need to be filled out for the child questionnaire or not.</description>
    <label>Use Parent Questionnaire Answers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Carrier</fullName>
            </value>
            <value>
                <fullName>Same as Parent</fullName>
            </value>
            <value>
                <fullName>Different from Parent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>